# todo-list-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: AI_ASSISTANT_PROMPT.md  PUBLISHING.md  reminder-daemon.md  requirements-mcp-server.md  sound-assets.md
src/todo_list_mcp/: github_file_client.py  logging_config.py  mcp_server.py  notification_manager.py  reminder_cli.py  reminder_sidecar.py  settings.py  sound_client.py  task_manager.py  wxpython_reminder_client.py
src/todo_list_mcp/_old/: cli.py  db.py  example_pyqt6_window.py  mcp_server.py  models.py  service.py  todo_client.py  worker.py
tests/: client.py  test_e2e_mcp.py
