[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-list-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
    "fastmcp>=0.2.0",
    "typer>=0.12.3",
    "pydantic-settings>=2.2.1",
    "rich>=13.7.1",
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
    "plyer>=2.1.0",
    "pytest>=8.2.1",
    "pyqt6>=6.9.1",
]

[project.scripts]
todo-list-mcp = "todo_list_mcp.mcp_server:app"
