[build-system]
requires = ["uv_build>=0.9.24"]
build-backend = "uv_build"

[project]
name = "todo-list-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.2",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
    "httpx>=0.28.1",

    # CLI interface
    "typer>=0.21.1",
    "rich>=14.2.0",

    # Logging and configuration
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.5",
    "ty>=0.0.11"
]

[tool.uv]
package = true

# [project.scripts]
# todo-list-mcp = "todo_list_mcp.mcp_server:app"
